--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ h2 {
 
 .sameP {
   margin: 0.5rem;
-  font-weight: 500;
+  font-weight: bold;
   font-size: 1.2rem;
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -75,7 +75,7 @@ h2 {
 
 .pass {
   margin: 0.5rem;
-  font-weight: 500;
+  font-weight: bold;
   font-size: 1.5rem;
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
