--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html, body {
+  touch-action: manipulation;
+}
 * {
   margin: 0;
   padding: 0;
@@ -61,8 +64,10 @@ h2 {
 }
 
 .passport {
+  
   display: block;
   margin-top: 0.4rem;
+  opacity: 0.8;
 }
 
 .sameP {
@@ -125,6 +130,7 @@ h2 {
   width: 60%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .footer {
